--- a/ProjectIKS/src/app/modules/accommodations/accommodation-details/accommodation-details.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-details/accommodation-details.component.html
@@ -23,7 +23,7 @@
     <img *ngFor="let photo of accommodation.photos" [src]="photo" alt="Slika smeštaja" style="width: 100%; height: auto; padding: 10px; border-radius: 20px;">
   </div>
   <form fxLayoutAlign="stretch" fxLayout="column" class="reservation-form" [formGroup]="reservationSend" >
-    <mat-form-field *ngIf="loginService.hasRole('Guest')" style="margin-top: 20px">
+    <mat-form-field style="margin-top: 20px">
       <mat-label>Enter a date range</mat-label>
       <mat-date-range-input [rangePicker]="picker">
         <input matStartDate [(ngModel)] = "startDate" formControlName="startDate" placeholder="Start date">
@@ -34,9 +34,9 @@
       <mat-date-range-picker #picker></mat-date-range-picker>
     </mat-form-field>
     <mat-form-field>
-      <input *ngIf="loginService.hasRole('Guest')" matInput type="number" id="number-guests" formControlName="numberGuests"  placeholder="Add number guests" min="0">
+      <input matInput type="number" id="number-guests" formControlName="numberGuests"  placeholder="Add number guests" min="0">
     </mat-form-field>
-    <button *ngIf="loginService.hasRole('Guest')" class="reservation_button" mat-raised-button color="primary" id="reservationbtn" [disabled]="!reservationSend.valid" (click)="reserveAccommodation(accommodation)">Reservation accommodation</button>
+    <button class="reservation_button" mat-raised-button color="primary" id="reservationbtn" [disabled]="!reservationSend.valid" (click)="reserveAccommodation(accommodation)">Reservation accommodation</button>
   </form>
 </div>
 <div>
