--- a/ProjectIKS/src/app/modules/accommodations/accommodation-details/accommodation-details.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-details/accommodation-details.component.html
@@ -36,7 +36,7 @@
     <mat-form-field>
       <input matInput type="number" id="number-guests" formControlName="numberGuests"  placeholder="Add number guests" min="0">
     </mat-form-field>
-    <button class="reservation_button" mat-raised-button color="primary" id="reservationbtn" [disabled]="!reservationSend.valid" (click)="reserveAccommodation(accommodation)">Reservation accommodation</button>
+    <button class="reservation_button" type="submit" mat-raised-button color="primary" id="reservationbtn" [disabled]="!reservationSend.valid" (click)="reserveAccommodation(accommodation)">Reservation accommodation</button>
   </form>
 </div>
 <div>
