--- a/ProjectIKS/src/app/modules/unregistered-user/signup/signup.component.html
+++ b/ProjectIKS/src/app/modules/unregistered-user/signup/signup.component.html
@@ -25,12 +25,12 @@
         <mat-form-field>
           <input matInput formControlName="phone" placeholder="phone without any special sign">
         </mat-form-field>
-<!--        <div fxLayoutAlign="center" class="radio-buttons">-->
-<!--          <mat-radio-group class="radio-group" (change)="onUserTypeChange($event)">-->
-<!--            <mat-radio-button value="OWNER" class="white-text">Owner</mat-radio-button>-->
-<!--            <mat-radio-button value="GUEST" class="white-text">Guest</mat-radio-button>-->
-<!--          </mat-radio-group>-->
-<!--        </div>-->
+        <div fxLayoutAlign="center" class="radio-buttons">
+          <mat-radio-group class="radio-group" (change)="onUserTypeChange($event)">
+            <mat-radio-button value="OWNER" class="white-text">Owner</mat-radio-button>
+            <mat-radio-button value="GUEST" class="white-text">Guest</mat-radio-button>
+          </mat-radio-group>
+        </div>
         <button mat-button type="submit" id="registerbtn" class="signup-button" [disabled]="!signUp.valid" (click)="registerClicked()">Register</button>
       </form>
     </mat-card>
